<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.georgekaraolanis.project4_musicalstructureapp.LoginActivity">

    <TextView
        style="@style/text_view_style"
        android:text="@string/label_login"
        android:textSize="@dimen/text_size_label"
        android:gravity="center"/>

    <TextView
        style="@style/text_view_style"
        android:text="@string/info_login"
        android:textSize="@dimen/text_size_info" />

    <Button
        android:id="@+id/song_list_button"
        style="@style/button_style"
        android:text="@string/button_text_song_list"/>

</LinearLayout>
